# Filler-Cut

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  KNOWN_ISSUES.md  LICENSE  README.md  README.tr.md  pyproject.toml
src/fillercut/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/fillercut/audio/: __init__.py  extractor.py  probe.py  silence.py
src/fillercut/detect/: __init__.py  fillers.py  silence.py
src/fillercut/plan/: __init__.py  cutplan.py
src/fillercut/render/: __init__.py  encoder.py  render.py
src/fillercut/report/: __init__.py  html_report.py  json_report.py  review_server.py
src/fillercut/transcribe/: __init__.py  base.py  fw_backend.py  wcpp_backend.py
tests/: conftest.py  make_fixture.py  test_cli.py  test_config.py  test_cutplan.py  test_detect_silence.py  test_encoder.py  test_extractor.py  test_fillers.py  test_html_report.py  test_integration.py  test_json_report.py  test_models.py  test_pipeline.py  test_probe.py  test_render.py  test_review_server.py  test_silence.py  test_transcribe.py  test_wcpp.py
tests/data/: transcript_sample.json  wcpp_output_sample.json  wcpp_reference_tr.json
