[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fillercut"
version = "0.1.0"
description = "Konuşma analiziyle tamamlayıcı sözcükleri ve gereksiz sessizlikleri videodan kesen CLI aracı"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "faster-whisper>=1",
    "rapidfuzz>=3",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
fillercut = "fillercut.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fillercut"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
