[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fillercut"
version = "0.1.0"
description = "Konuşma analiziyle tamamlayıcı sözcükleri ve gereksiz sessizlikleri videodan kesen CLI aracı"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "faster-whisper>=1",
    "rapidfuzz>=3",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]
# CUDA (RTX 4050): CTranslate2'nin yüklediği cuBLAS/cuDNN DLL'leri bu pip
# paketlerinden gelir — Windows'ta dizin kaydı fw_backend._register_nvidia_dll_dirs'de.
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[project.scripts]
fillercut = "fillercut.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fillercut"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ffmpeg: gerçek ffmpeg/ffprobe gerektirir — CI'da değil, kullanıcı makinesinde koşar (CI deselect: -m 'not ffmpeg')",
]
